--- a/cfbook.tex
+++ b/cfbook.tex
@@ -4742,6 +4742,144 @@ of attributes.  More typically called ``row''.
 
 \end{description}
 
+\chapter{Visualizing data}
+
+So far we have been learning the Python language and then 
+learning how to use Python, the network, and databases 
+to maniulate data.
+
+In this chapter, we take a look at 
+three 
+complete applications that bring all of these things together
+to manage and visualize data.  These applications might 
+be sample code that might help get you started in solving your
+real-world problems.
+
+Each of the applications is a ZIP file that you can download
+and extract onto your computer and execute.
+
+\section{Building a Google map from geocoded data}
+
+In this project, we are using the Google geocoding API
+to clean up some user-entered geographic locations of 
+university names and then placing the data on a Google
+map.  To get started, download the application from:
+
+\url{www.py4inf.com/code/geodata.zip}
+
+When you finish, you will have a google map that gives
+you the locations from your survey data:
+
+\beforefig
+\centerline{\includegraphics[height=2.50in]{figs2/google-map.eps}}
+\afterfig
+
+The first problem to solve is that the Google geocoding
+API is rate limited to 2500 requests per day.  So if you have
+a lot of data you might need to stop and restart the lookup
+process several times.  So we break the problem into two
+phases.  
+
+In the first phase we take our input data in the file
+{\bf where.data} and read it one line at a time, and retreive the
+geocoded response and store it in a database {\bf geodata.sqlite}.
+Before we use the geocoding API, we simply check to see if
+we already have the data for that particular line of input.
+
+You can re-start the process at any time by removing the file
+{\bf geodata.sqlite}.
+
+Run the {\bf geoload.py} program.   This program will read the input
+lines in {\bf where.data} and for each line check to see if it is already
+in the database and if we don't have the data for the location,
+call the geocoding API to retrieve the data and stre it in 
+the database.
+
+Here is a sample run after there is already some data in the 
+database:
+
+\beforeverb
+\begin{verbatim}
+Found in database  Northeastern University
+Found in database  University of Hong Kong, ...
+Found in database  Technion
+Found in database  Viswakarma Institute, Pune, India
+Found in database  UMD
+Found in database  Tufts University
+
+Resolving Monash University
+Retrieving http://maps.googleapis.com/maps/api/
+    geocode/json?sensor=false&address=Monash+University
+Retrieved 2063 characters {    "results" : [  
+{u'status': u'OK', u'results': ... }
+
+Resolving Kokshetau Institute of Economics and Management
+Retrieving http://maps.googleapis.com/maps/api/
+    geocode/json?sensor=false&address=Kokshetau+Institute+of+Economics+and+Management
+Retrieved 1749 characters {    "results" : [  
+{u'status': u'OK', u'results': ... }
+...
+\end{verbatim}
+\afterverb
+%
+The first five locations are already in the database and so they 
+are skipped.  The program scans to the point where it finds un-retrieved
+locations and starts retrieving them.
+
+The {\bf geoload.py} can be stopped at any time, and there is a counter 
+that you can use to limit the number of calls to the geocoding
+API for each run.  Given that the {\bf where.data} only has a few hundred
+data items, you should not run into the daily rate limit, but if you 
+had more data it might take several runs over several days to 
+get your database to have all of the geocoded data for your input.
+
+Once you have some data loaded into geodata.sqlite, you can 
+visualize the data using the {\bf geodump.py} program.  This
+program reads the database and writes tile file {\bf where.js}
+with the location, latitude, and longitude in the form of
+executable JavaScript code.   
+
+A run of the {\bf geodump.py} program is as follows:
+
+\beforeverb
+\begin{verbatim}
+Northeastern University, ... Boston, MA 02115, USA 42.3396998 -71.08975
+Bradley University, 1501 ... Peoria, IL 61625, USA 40.6963857 -89.6160811
+...
+Technion, Viazman 87, Kesalsaba, 32000, Israel 32.7775 35.0216667
+Monash University Clayton ... VIC 3800, Australia -37.9152113 145.134682
+Kokshetau, Kazakhstan 53.2833333 69.3833333
+...
+12 records written to where.js
+Open where.html to view the data in a browser
+\end{verbatim}
+\afterverb
+%
+The file {\bf where.html} consists of HTML and JavaScript to visualize 
+a Google map.  It reads the most recent data in where.js to get 
+the data to be visualized.  Here is the format of the {\bf where.js} file:
+
+\beforeverb
+\begin{verbatim}
+myData = [
+[42.3396998,-71.08975, 'Northeastern University, 360 ... Boston, MA 02115, USA'],
+[40.6963857,-89.6160811, 'Bradley University, ... Peoria, IL 61625, USA'],
+[32.7775,35.0216667, 'Technion, Viazman 87, Kesalsaba, 32000, Israel'],
+   ...
+];
+\end{verbatim}
+\afterverb
+%
+This is a JavaScript variable that contains a list of lists.  
+The syntax for JavaScript list constants is very similar to 
+Python so the syntax should be familiar to you.
+
+Simply open {\bf where.html} in a browser to see the locations.  You 
+can hover over each map pin to find the location that the 
+gecoding API returned for the user-entered input.  If you 
+cannot see any data when you open the {\bf where.html} file, you might 
+want to check the JavaScript or developer console for your browser.
+
 \chapter{Automating common tasks on your computer}
 
 We have been reading data from files, networks, services,
