Missed a bit-of-stuff.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -4835,7 +4835,7 @@ get your database to have all of the geocoded data for your input.
 
 Once you have some data loaded into geodata.sqlite, you can 
 visualize the data using the {\bf geodump.py} program.  This
-program reads the database and writes tile file {\bf where.js}
+program reads the database and writes the file {\bf where.js}
 with the location, latitude, and longitude in the form of
 executable JavaScript code.   
 
