--- a/cfbook.tex
+++ b/cfbook.tex
@@ -4751,40 +4751,45 @@ to maniulate data.
 In this chapter, we take a look at 
 three 
 complete applications that bring all of these things together
-to manage and visualize data.  These applications might 
-be sample code that might help get you started in solving your
-real-world problems.
+to manage and visualize data.  You  might use these applications 
+as sample code to help get you started in solving a
+real-world problem.
 
 Each of the applications is a ZIP file that you can download
 and extract onto your computer and execute.
 
 \section{Building a Google map from geocoded data}
+\index{Google!map}
+\index{Visualization!map}
 
 In this project, we are using the Google geocoding API
 to clean up some user-entered geographic locations of 
 university names and then placing the data on a Google
-map.  To get started, download the application from:
+map.  
+
+\beforefig
+\centerline{\includegraphics[height=2.25in]{figs2/google-map.eps}}
+\afterfig
+
+To get started, download the application from:
 
 \url{www.py4inf.com/code/geodata.zip}
 
-When you finish, you will have a google map that gives
-you the locations from your survey data:
-
-\beforefig
-\centerline{\includegraphics[height=2.50in]{figs2/google-map.eps}}
-\afterfig
-
-The first problem to solve is that the Google geocoding
-API is rate limited to 2500 requests per day.  So if you have
+The first problem to solve is that the free Google geocoding
+API is rate limited to some number of requests per day.  So if you have
 a lot of data you might need to stop and restart the lookup
 process several times.  So we break the problem into two
 phases.  
 
-In the first phase we take our input data in the file
+In the first phase we take our input ``survey'' data in the file
 {\bf where.data} and read it one line at a time, and retreive the
-geocoded response and store it in a database {\bf geodata.sqlite}.
-Before we use the geocoding API, we simply check to see if
-we already have the data for that particular line of input.
+geocoded informtion from Google and store it 
+in a database {\bf geodata.sqlite}.
+Before we use the geocoding API for each user-entered location, 
+we simply check to see if we already have the data for that 
+particular line of input.  The database is functioning as a 
+local "cache" of our geocoding data to make sure we never ask 
+for the same data twice.
 
 You can re-start the process at any time by removing the file
 {\bf geodata.sqlite}.
@@ -4879,6 +4884,170 @@ can hover over each map pin to find the location that the
 gecoding API returned for the user-entered input.  If you 
 cannot see any data when you open the {\bf where.html} file, you might 
 want to check the JavaScript or developer console for your browser.
+
+\section{Visualizing networks and interconnections}
+\index{Google!page rank}
+\index{Visualization!networks}
+\index{Visualization!page rank}
+
+In this application, we will perform some of the functions of a search
+engine.   We will first spider a small subset of the web and then run
+a highly over similified version of the Google page rank algorithm to
+to determine which pages are most highly connected and then vizualize
+the page rank and connectivity of our small corner of the web.
+We will use the D2 JavaScript Visualization library 
+\url{http://d3js.org/} to product the visualization output.
+
+You can download and extract this application from:
+
+\url{www.py4inf.com/code/pagerank.zip}
+
+\beforefig
+\centerline{\includegraphics[height=2.25in]{figs2/pagerank.eps}}
+\afterfig
+
+The first program ({\bf spider.py}) program crawls a web 
+site and pulls a series of pages into the
+database ({\bf spider.sqlite}), recording the links between pages.
+You can restart the process at any time by removing the 
+{\bf spider.sqlite} file and re-running {\bf spider.py}.
+
+\beforeverb
+\begin{verbatim}
+Enter web url or enter: http://www.dr-chuck.com/
+['http://www.dr-chuck.com']
+How many pages:2
+1 http://www.dr-chuck.com/ 12
+2 http://www.dr-chuck.com/csev-blog/ 57
+How many pages:
+\end{verbatim}
+\afterverb
+%
+In this sample run, we told it to crawl a website and retrieve two 
+pages.  If you restart the program and tell it to crawl more
+pages, it will not re-crawl any pages already in the database.  Upon 
+restart it goes to a random non-crawled page and starts there.  So 
+each successive run of {\bf spider.py} is additive.
+
+\beforeverb
+\begin{verbatim}
+Enter web url or enter: http://www.dr-chuck.com/
+['http://www.dr-chuck.com']
+How many pages:3
+3 http://www.dr-chuck.com/csev-blog 57
+4 http://www.dr-chuck.com/dr-chuck/resume/speaking.htm 1
+5 http://www.dr-chuck.com/dr-chuck/resume/index.htm 13
+How many pages:
+\end{verbatim}
+\afterverb
+%
+You can have multiple starting points in the same database - 
+within the program these are called ``webs''.   The spider
+chooses randomly amongst all non-visited links across all
+the webs as the next page to spider.
+
+If you want to dump the contents of the {\bf spider.sqlite} file, you can 
+run {\bf spdump.py} as follows:
+
+\beforeverb
+\begin{verbatim}
+(5, None, 1.0, 3, u'http://www.dr-chuck.com/csev-blog')
+(3, None, 1.0, 4, u'http://www.dr-chuck.com/dr-chuck/resume/speaking.htm')
+(1, None, 1.0, 2, u'http://www.dr-chuck.com/csev-blog/')
+(1, None, 1.0, 5, u'http://www.dr-chuck.com/dr-chuck/resume/index.htm')
+4 rows.
+\end{verbatim}
+\afterverb
+%
+This shows the number of incoming links, the old page rank, the new page
+rank, the id of the page, and the url of the page.  The spdump.py program
+only shows pages that have at least one incoming link to them.
+
+Once you have a few pages in the database, you can run page rank on the
+pages using the sprank.py program.  You simply tell it how many page
+rank iterations to run.
+
+\beforeverb
+\begin{verbatim}
+How many iterations:2
+1 0.546848992536
+2 0.226714939664
+[(1, 0.559), (2, 0.659), (3, 0.985), (4, 2.135), (5, 0.659)]
+\end{verbatim}
+\afterverb
+%
+You can dump the daabase again to see that page rank has been updated:
+
+\beforeverb
+\begin{verbatim}
+(5, 1.0, 0.985, 3, u'http://www.dr-chuck.com/csev-blog')
+(3, 1.0, 2.135, 4, u'http://www.dr-chuck.com/dr-chuck/resume/speaking.htm')
+(1, 1.0, 0.659, 2, u'http://www.dr-chuck.com/csev-blog/')
+(1, 1.0, 0.659, 5, u'http://www.dr-chuck.com/dr-chuck/resume/index.htm')
+4 rows.
+\end{verbatim}
+\afterverb
+%
+You can run {\bf sprank.py} as many times as you like and it will simply refine
+the page rank the more times you run it.  You can even run {\bf sprank.py} a few times
+and then go spider a few more pages sith {\bf spider.py} and then run {\bf sprank.py}
+to re-converge the page rank values.  A search engine usually runs both the crawling and 
+ranking programs all the time.
+
+If you want to restart the page rank calculations without re-spidering the 
+web pages, you can use {\bf spreset.py} and then restart {\bf sprank.py}.
+
+\beforeverb
+\begin{verbatim}
+How many iterations:50
+1 0.546848992536
+2 0.226714939664
+3 0.0659516187242
+4 0.0244199333
+5 0.0102096489546
+6 0.00610244329379
+...
+42 0.000109076928206
+43 9.91987599002e-05
+44 9.02151706798e-05
+45 8.20451504471e-05
+46 7.46150183837e-05
+47 6.7857770908e-05
+48 6.17124694224e-05
+49 5.61236959327e-05
+50 5.10410499467e-05
+[(512, 0.0296), (1, 12.79), (2, 28.93), (3, 6.808), (4, 13.46)]
+\end{verbatim}
+\afterverb
+%
+For each iteration of the page rank algorithm it prints the average
+change per page of the page rank.   The network initially is quite
+unbalanced and so the individual page rank values change wildly between
+iterations.
+But in a few short iterations, the page rank converges.  You
+should run {\bf prank.py} long enough that the page rank values converge.
+
+If you want to visualize the current top pages in terms of page rank,
+run {\bf spjson.py} to read the database and write the data for the 
+most highly linked pages in JSON format to be viewed in a
+web browser.
+
+\beforeverb
+\begin{verbatim}
+Creating JSON output on spider.json...
+How many nodes? 30
+Open force.html in a browser to view the visualization
+\end{verbatim}
+\afterverb
+%
+You can view this data by opening the file {\bf force.html} in your web browser.  
+This shows an automatic layout of the nodes and links.  You can click and 
+drag any node and you can also double click on a node to find the URL
+that is represented by the node.
+
+If you rerun the other utilities, re-run {\bf spjson.py} 
+press refresh in the browser to get the new data from {\bf spider.json}.
+
 
 \chapter{Automating common tasks on your computer}
 
